Replaced AssessmentStandards database with new version with updated table name.

--- a/TraceIt.Android/TraceIt.Android.csproj
+++ b/TraceIt.Android/TraceIt.Android.csproj
@@ -102,6 +102,7 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Resources\drawable\" />
     <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
@@ -109,9 +110,6 @@
       <Project>{B72D791C-A6C8-4B5D-8561-C5626824E3A0}</Project>
       <Name>TraceIt</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\drawable\gradient.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
