Replaced GradientTabbedPageRenderer with GradientShellPageRenderer and implemented the gradient effects.

--- a/TraceIt.iOS/TraceIt.iOS.csproj
+++ b/TraceIt.iOS/TraceIt.iOS.csproj
@@ -65,8 +65,10 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
+    <Compile Include="Renderers\CustomEntryRenderer.cs" />
+    <Compile Include="Renderers\CustomPickerRenderer.cs" />
     <Compile Include="Renderers\GradientNavigationPageRenderer.cs" />
-    <Compile Include="Renderers\GradientTabbedPageRenderer.cs" />
+    <Compile Include="Renderers\GradientShellPageRenderer.cs" />
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
