--- a/TraceIt.iOS/TraceIt.iOS.csproj
+++ b/TraceIt.iOS/TraceIt.iOS.csproj
@@ -65,6 +65,8 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
+    <Compile Include="Renderers\Appearance Trackers\GradientShellPageNavigationAppearanceTracker.cs" />
+    <Compile Include="Renderers\Appearance Trackers\GradientShellPageTabBarAppearanceTracker.cs" />
     <Compile Include="Renderers\CustomEntryRenderer.cs" />
     <Compile Include="Renderers\CustomPickerRenderer.cs" />
     <Compile Include="Renderers\GradientNavigationPageRenderer.cs" />
@@ -160,7 +162,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Renderers\Appearance Trackers\" />
     <Folder Include="Services\" />
   </ItemGroup>
 </Project>
