Added reference to StandardDetailPage.

--- a/TraceIt/TraceIt.csproj
+++ b/TraceIt/TraceIt.csproj
@@ -53,6 +53,9 @@
     <EmbeddedResource Update="Views\ShellHomePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\StandardDetailPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\SubjectSelectionPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
