--- a/TraceIt.Android/TraceIt.Android.csproj
+++ b/TraceIt.Android/TraceIt.Android.csproj
@@ -54,34 +54,38 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CarouselView.FormsPlugin">
+      <Version>5.2.0</Version>
+    </PackageReference>
     <PackageReference Include="Sharpnado.Presentation.Forms">
-      <Version>1.7.0</Version>
+      <Version>1.7.1</Version>
     </PackageReference>
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.7.335</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Licensing">
-      <Version>18.2.0.45</Version>
+      <Version>18.2.0.47</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.Buttons">
-      <Version>18.2.0.45</Version>
+      <Version>18.2.0.47</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.Core">
-      <Version>18.2.0.45</Version>
+      <Version>18.2.0.47</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.SfListView">
-      <Version>18.2.0.45</Version>
+      <Version>18.2.0.47</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.SfTabView">
-      <Version>18.2.0.45</Version>
+      <Version>18.2.0.47</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="4.7.0.1142" />
+    <PackageReference Include="Xamarin.Forms" Version="4.7.0.1179" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
     <Compile Include="Renderers\Appearance Trackers\GradientShellBottomTabBarAppearanceTracker.cs" />
     <Compile Include="Renderers\Appearance Trackers\GradientShellToolbarAppearanceTracker.cs" />
+    <Compile Include="Renderers\Appearance Trackers\GradientShellTopTabBarAppearanceTracker.cs" />
     <Compile Include="Renderers\GradientNavigationPageRenderer.cs" />
     <Compile Include="Renderers\GradientShellPageRenderer.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
