--- a/TraceIt/TraceIt.csproj
+++ b/TraceIt/TraceIt.csproj
@@ -17,14 +17,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Sharpnado.Presentation.Forms" Version="1.7.0" />
+    <PackageReference Include="CarouselView.FormsPlugin" Version="5.2.0" />
+    <PackageReference Include="Sharpnado.Presentation.Forms" Version="1.7.1" />
     <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
-    <PackageReference Include="Syncfusion.Licensing" Version="18.2.0.45" />
-    <PackageReference Include="Syncfusion.Xamarin.Buttons" Version="18.2.0.45" />
-    <PackageReference Include="Syncfusion.Xamarin.Core" Version="18.2.0.45" />
-    <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="18.2.0.45" />
-    <PackageReference Include="Syncfusion.Xamarin.SfTabView" Version="18.2.0.45" />
-    <PackageReference Include="Xamarin.Forms" Version="4.7.0.1142" />
+    <PackageReference Include="Syncfusion.Licensing" Version="18.2.0.47" />
+    <PackageReference Include="Syncfusion.Xamarin.Buttons" Version="18.2.0.47" />
+    <PackageReference Include="Syncfusion.Xamarin.Core" Version="18.2.0.47" />
+    <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="18.2.0.47" />
+    <PackageReference Include="Syncfusion.Xamarin.SfTabView" Version="18.2.0.47" />
+    <PackageReference Include="Xamarin.Forms" Version="4.7.0.1179" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
 
@@ -42,6 +43,9 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\Charts\EndorsementsChartPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\Charts\MainChartsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\SelectedStandardsPage.xaml">
