Created CustomTabViewRenderer and implemented override of OnElementChanged.

--- a/TraceIt.Android/TraceIt.Android.csproj
+++ b/TraceIt.Android/TraceIt.Android.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Renderers\Appearance Trackers\GradientShellBottomTabBarAppearanceTracker.cs" />
     <Compile Include="Renderers\Appearance Trackers\GradientShellToolbarAppearanceTracker.cs" />
     <Compile Include="Renderers\Appearance Trackers\GradientShellTopTabBarAppearanceTracker.cs" />
+    <Compile Include="Renderers\CustomTabViewRenderer.cs" />
     <Compile Include="Renderers\GradientNavigationPageRenderer.cs" />
     <Compile Include="Renderers\GradientShellPageRenderer.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
