--- a/TraceIt/TraceIt.csproj
+++ b/TraceIt/TraceIt.csproj
@@ -18,13 +18,13 @@
 
   <ItemGroup>
     <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
-    <PackageReference Include="Syncfusion.Licensing" Version="18.2.0.47" />
-    <PackageReference Include="Syncfusion.Xamarin.Buttons" Version="18.2.0.47" />
-    <PackageReference Include="Syncfusion.Xamarin.Core" Version="18.2.0.47" />
-    <PackageReference Include="Syncfusion.Xamarin.SfChart" Version="18.2.0.47" />
-    <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="18.2.0.47" />
-    <PackageReference Include="Syncfusion.Xamarin.SfTabView" Version="18.2.0.47" />
-    <PackageReference Include="Xamarin.Forms" Version="4.7.0.1239" />
+    <PackageReference Include="Syncfusion.Licensing" Version="18.2.0.48" />
+    <PackageReference Include="Syncfusion.Xamarin.Buttons" Version="18.2.0.48" />
+    <PackageReference Include="Syncfusion.Xamarin.Core" Version="18.2.0.48" />
+    <PackageReference Include="Syncfusion.Xamarin.SfChart" Version="18.2.0.48" />
+    <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="18.2.0.48" />
+    <PackageReference Include="Syncfusion.Xamarin.SfTabView" Version="18.2.0.48" />
+    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1269" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
 
@@ -72,6 +72,9 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\SubjectsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\testPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
