Changed AppIcon to draw from AppIcons

--- a/TraceIt.iOS/Info.plist
+++ b/TraceIt.iOS/Info.plist
@@ -33,11 +33,10 @@
 	<key>CFBundleName</key>
 	<string>TraceIt</string>
 	<key>XSAppIconAssets</key>
-	<string>Assets.xcassets/AppIcon.appiconset</string>
+	<string>Assets.xcassets/AppIcons.appiconset</string>
 	<key>UIStatusBarStyle</key>
-    <string>UIStatusBarStyleLightContent</string>
-    <key>UIViewControllerBasedStatusBarAppearance</key>
-    <false/>
-
+	<string>UIStatusBarStyleLightContent</string>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
