--- a/TraceIt/TraceIt.csproj
+++ b/TraceIt/TraceIt.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="Syncfusion.Xamarin.Core" Version="18.2.0.56" />
     <PackageReference Include="Syncfusion.Xamarin.SfChart" Version="18.2.0.56" />
     <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="18.2.0.56" />
+    <PackageReference Include="Syncfusion.Xamarin.SfProgressBar" Version="18.2.0.56" />
     <PackageReference Include="Syncfusion.Xamarin.SfTabView" Version="18.2.0.56" />
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1364" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
