Added Forms9Patch package and initialised respectively.

--- a/TraceIt.Android/TraceIt.Android.csproj
+++ b/TraceIt.Android/TraceIt.Android.csproj
@@ -74,6 +74,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Forms9Patch">
+      <Version>2.4.6</Version>
+    </PackageReference>
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.7.335</Version>
     </PackageReference>
