--- a/TraceIt.iOS/TraceIt.iOS.csproj
+++ b/TraceIt.iOS/TraceIt.iOS.csproj
@@ -104,6 +104,9 @@
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.7.335</Version>
     </PackageReference>
+    <PackageReference Include="SQLiteNetExtensions.Async">
+      <Version>2.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Syncfusion.Licensing">
       <Version>18.3.0.40</Version>
     </PackageReference>
