--- a/TraceIt.Android/TraceIt.Android.csproj
+++ b/TraceIt.Android/TraceIt.Android.csproj
@@ -77,6 +77,18 @@
     <PackageReference Include="Forms9Patch">
       <Version>2.4.6</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.AppCenter">
+      <Version>3.4.3</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.AppCenter.Analytics">
+      <Version>3.4.3</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.AppCenter.Crashes">
+      <Version>3.4.3</Version>
+    </PackageReference>
+    <PackageReference Include="Plugin.StoreReview">
+      <Version>3.0.0-beta</Version>
+    </PackageReference>
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.7.335</Version>
     </PackageReference>
@@ -101,6 +113,9 @@
     <PackageReference Include="Syncfusion.Xamarin.SfProgressBar">
       <Version>18.3.0.44</Version>
     </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfTabView">
+      <Version>18.3.0.44</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1560" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
@@ -112,6 +127,7 @@
     <Compile Include="Renderers\GradientShellPageRenderer.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CacheManagerService.cs" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\AssessmentStandards.db3" />
@@ -137,9 +153,7 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Services\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\TraceIt\TraceIt.csproj">
       <Project>{B72D791C-A6C8-4B5D-8561-C5626824E3A0}</Project>
