--- a/TraceIt/TraceIt.csproj
+++ b/TraceIt/TraceIt.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -20,6 +20,10 @@
 
   <ItemGroup>
     <PackageReference Include="Forms9Patch" Version="2.4.6" />
+    <PackageReference Include="Microsoft.AppCenter" Version="3.4.3" />
+    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="3.4.3" />
+    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="3.4.3" />
+    <PackageReference Include="Plugin.StoreReview" Version="3.0.0-beta" />
     <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
     <PackageReference Include="SQLiteNetExtensions.Async" Version="2.1.0" />
     <PackageReference Include="Syncfusion.Licensing" Version="18.3.0.44" />
@@ -28,6 +32,7 @@
     <PackageReference Include="Syncfusion.Xamarin.SfChart" Version="18.3.0.44" />
     <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="18.3.0.44" />
     <PackageReference Include="Syncfusion.Xamarin.SfProgressBar" Version="18.3.0.44" />
+    <PackageReference Include="Syncfusion.Xamarin.SfTabView" Version="18.3.0.44" />
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1560" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
