--- a/TraceIt.iOS/Info.plist
+++ b/TraceIt.iOS/Info.plist
@@ -25,7 +25,7 @@
 	<key>CFBundleDisplayName</key>
 	<string>TraceIt</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.codespace.TraceIt</string>
+	<string>com.codespace.traceit</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>UILaunchStoryboardName</key>
